Added module buttons to ManSci second year view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Choose your year"
+        android:text="@string/main_textview_chooseyear"
         android:id="@+id/main_textview_chooseyear"
         android:layout_toStartOf="@+id/main_button_2ndyear"
         android:layout_alignParentEnd="true" />
@@ -21,7 +21,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2nd year"
+        android:text="@string/main_button_2ndyear"
         android:id="@+id/main_button_2ndyear"
         android:layout_below="@+id/main_textview_chooseyear"
         android:layout_centerHorizontal="true"
