--- a/app/src/main/res/layout/modules_content_da2.xml
+++ b/app/src/main/res/layout/modules_content_da2.xml
@@ -12,4 +12,68 @@
     tools:context="mansci.gradesapp.manSciModules.DA2"
     tools:showIn="@layout/modules_activity_da2">
 
+    <Button
+        android:id="@+id/manSci_secondYear_modules_da2_addAssignment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="55dp"
+        android:onClick="addAssignment"
+        android:text="@string/add_assignment" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Exam grade needed"
+        android:id="@+id/manSci_secondYear_modules_da2_gradeNeeded"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="For a 1st: "
+        android:id="@+id/manSci_secondYear_modules_da2_First"
+        android:layout_below="@+id/manSci_secondYear_modules_da2_gradeNeeded"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="For a 2.1:"
+        android:id="@+id/manSci_secondYear_modules_da2_twoOne"
+        android:layout_below="@+id/manSci_secondYear_modules_da2_First"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="For a 2.2:"
+        android:id="@+id/manSci_secondYear_modules_da2_twoTwo"
+        android:layout_below="@+id/manSci_secondYear_modules_da2_twoOne"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="For a 3rd:"
+        android:id="@+id/manSci_secondYear_modules_da2_third"
+        android:layout_below="@id/manSci_secondYear_modules_da2_twoTwo"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="To Pass:"
+        android:id="@+id/manSci_secondYear_modules_da2_Pass"
+        android:layout_below="@+id/manSci_secondYear_modules_da2_third"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
