--- a/app/src/main/res/layout/modules_content_minor.xml
+++ b/app/src/main/res/layout/modules_content_minor.xml
@@ -12,4 +12,68 @@
     tools:context="mansci.gradesapp.manSciModules.Minor"
     tools:showIn="@layout/modules_activity_minor">
 
-</RelativeLayout>
+<Button
+android:id="@+id/manSci_secondYear_modules_minor_addAssignment"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_alignParentBottom="true"
+android:layout_centerHorizontal="true"
+android:layout_marginBottom="55dp"
+android:onClick="addAssignment"
+android:text="@string/add_assignment" />
+
+<TextView
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:textAppearance="?android:attr/textAppearanceMedium"
+android:text="Exam grade needed"
+android:id="@+id/manSci_secondYear_modules_minor_gradeNeeded"
+    android:layout_centerVertical="true"
+    android:layout_alignParentStart="true" />
+
+<TextView
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:textAppearance="?android:attr/textAppearanceMedium"
+android:text="For a 1st: "
+android:id="@+id/manSci_secondYear_modules_minor_First"
+android:layout_below="@+id/manSci_secondYear_modules_minor_gradeNeeded"
+android:layout_alignParentStart="true" />
+
+<TextView
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:textAppearance="?android:attr/textAppearanceMedium"
+android:text="For a 2.1:"
+android:id="@+id/manSci_secondYear_modules_minor_twoOne"
+android:layout_below="@+id/manSci_secondYear_modules_minor_First"
+android:layout_alignParentStart="true" />
+
+<TextView
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:textAppearance="?android:attr/textAppearanceMedium"
+android:text="For a 2.2:"
+android:id="@+id/manSci_secondYear_modules_minor_twoTwo"
+android:layout_below="@+id/manSci_secondYear_modules_minor_twoOne"
+android:layout_alignParentStart="true" />
+
+<TextView
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:textAppearance="?android:attr/textAppearanceMedium"
+android:text="For a 3rd:"
+android:id="@+id/manSci_secondYear_modules_minor_third"
+android:layout_below="@id/manSci_secondYear_modules_minor_twoTwo"
+android:layout_alignParentStart="true" />
+
+<TextView
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:textAppearance="?android:attr/textAppearanceMedium"
+android:text="To Pass:"
+android:id="@+id/manSci_secondYear_modules_minor_Pass"
+android:layout_below="@+id/manSci_secondYear_modules_minor_third"
+android:layout_alignParentStart="true" />
+
+    </RelativeLayout>
