--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,20 @@
         android:id="@+id/main_button_2ndyear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/main_textview_chooseyear"
+        android:layout_below="@+id/main_button_1styear"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="96dp"
         android:onClick="chooseYear"
         android:text="@string/main_button_2ndyear" />
+
+    <Button
+        android:id="@+id/main_button_1styear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main_textview_chooseyear"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="96dp"
+        android:onClick="chooseYear"
+        android:text="@string/main_button_1styear" />
 
 </RelativeLayout>
