Implemented Weight EditText-fields in MFOM3 module

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
 
     <!-- Dimensions used to replace pixels -->
     <dimen name="six_dp">6dp</dimen>
+    <dimen name="fifty_dp">50dp</dimen>
+    <dimen name="fifteen_dp">15dp</dimen>
 </resources>
