--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,6 +6,10 @@
     <item name="mfom3_assignment_2" type="id"/>
     <item name="mfom3_assignment_3" type="id"/>
     <item name="mfom3_assignment_4" type="id"/>
+    <item name="mfom3_assignment_1_weight" type="id"/>
+    <item name="mfom3_assignment_2_weight" type="id"/>
+    <item name="mfom3_assignment_3_weight" type="id"/>
+    <item name="mfom3_assignment_4_weight" type="id"/>
 
 
 </resources>
