--- a/app/src/main/res/layout/modules_content_mfom3.xml
+++ b/app/src/main/res/layout/modules_content_mfom3.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mfom_relative_layout"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -36,9 +38,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 1st: "
+        android:text="For a 1st:"
         android:id="@+id/manSci_secondYear_modules_mfom_First"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_gradeNeeded"
+        android:layout_marginEnd="5dp"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -48,6 +51,7 @@
         android:text="For a 2.1:"
         android:id="@+id/manSci_secondYear_modules_mfom_twoOne"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_First"
+        android:layout_marginEnd="5dp"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -56,17 +60,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="For a 2.2:"
         android:id="@+id/manSci_secondYear_modules_mfom_twoTwo"
+        android:layout_marginEnd="5dp"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_twoOne"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 3rd:"
-        android:id="@+id/manSci_secondYear_modules_mfom_third"
-        android:layout_below="@id/manSci_secondYear_modules_mfom_twoTwo"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -74,7 +71,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="To Pass:"
         android:id="@+id/manSci_secondYear_modules_mfom_Pass"
-        android:layout_below="@+id/manSci_secondYear_modules_mfom_third"
+        android:layout_marginEnd="5dp"
+        android:layout_below="@+id/manSci_secondYear_modules_mfom_twoTwo"
         android:layout_alignParentStart="true" />
 
     <Button
@@ -85,6 +83,45 @@
         android:onClick="calculateGrades"
         android:layout_alignTop="@+id/manSci_secondYear_modules_mfom_addAssignment"
         android:layout_toEndOf="@+id/manSci_secondYear_modules_mfom_addAssignment" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=""
+        android:id="@+id/manSci_secondYear_modules_mfom_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_First"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_First"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=""
+        android:id="@+id/manSci_secondYear_modules_mfom_twoOne_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_twoOne"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_twoOne"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=""
+        android:id="@+id/manSci_secondYear_modules_mfom_twoTwo_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_twoTwo"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_twoTwo"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=""
+        android:id="@+id/manSci_secondYear_modules_mfom_pass_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_Pass"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_Pass"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"/>
 
 
 </RelativeLayout>
