--- a/app/src/main/res/layout/modules_activity_mfom1.xml
+++ b/app/src/main/res/layout/modules_activity_mfom1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="mansci.gradesapp.manSciModules.cat">
+    tools:context="mansci.gradesapp.manSciModules.MFOM1">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_cat" />
+    <include layout="@layout/modules_content_mfom1" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
