--- a/app/src/main/res/layout/modules_content_cat.xml
+++ b/app/src/main/res/layout/modules_content_cat.xml
@@ -10,6 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="mansci.gradesapp.manSciModules.cat"
-    tools:showIn="@layout/activity_cat">
+    tools:showIn="@layout/modules_activity_cat">
 
 </RelativeLayout>
