--- a/app/src/main/res/layout/modules_content_mfom3.xml
+++ b/app/src/main/res/layout/modules_content_mfom3.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mfom_relative_layout"
-    android:clickable="true"
-    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -19,109 +19,109 @@
         android:id="@+id/manSci_secondYear_modules_mfom_addAssignment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="addAssignment"
-        android:text="@string/add_assignment"
-        android:layout_alignParentBottom="true"
         android:layout_alignEnd="@+id/manSci_secondYear_modules_mfom_gradeNeeded"
-        android:layout_marginBottom="51dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="51dp"
+        android:onClick="addAssignment"
+        android:text="@string/add_assignment" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Exam grade needed"
         android:id="@+id/manSci_secondYear_modules_mfom_gradeNeeded"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 1st:"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:text="Exam grade needed"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
         android:id="@+id/manSci_secondYear_modules_mfom_First"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_gradeNeeded"
         android:layout_marginEnd="5dp"
-        android:layout_alignParentStart="true" />
+        android:text="For a 1st:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
+        android:id="@+id/manSci_secondYear_modules_mfom_twoOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.1:"
-        android:id="@+id/manSci_secondYear_modules_mfom_twoOne"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_First"
         android:layout_marginEnd="5dp"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.1:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.2:"
         android:id="@+id/manSci_secondYear_modules_mfom_twoTwo"
-        android:layout_marginEnd="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_twoOne"
-        android:layout_alignParentStart="true" />
+        android:layout_marginEnd="5dp"
+        android:text="For a 2.2:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
     <TextView
+        android:id="@+id/manSci_secondYear_modules_mfom_Pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="To Pass:"
-        android:id="@+id/manSci_secondYear_modules_mfom_Pass"
-        android:layout_marginEnd="5dp"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_twoTwo"
-        android:layout_alignParentStart="true" />
+        android:layout_marginEnd="5dp"
+        android:text="To Pass:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/calculate_grades_needed"
         android:id="@+id/manSci_secondYear_button_MFOM_calculateGrades"
-        android:onClick="calculateGrades"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignTop="@+id/manSci_secondYear_modules_mfom_addAssignment"
-        android:layout_toEndOf="@+id/manSci_secondYear_modules_mfom_addAssignment" />
+        android:layout_toEndOf="@+id/manSci_secondYear_modules_mfom_addAssignment"
+        android:onClick="calculateGrades"
+        android:text="@string/calculate_grades_needed" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text=""
         android:id="@+id/manSci_secondYear_modules_mfom_First_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_First"
         android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_First"
-        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_First"/>
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text=""
         android:id="@+id/manSci_secondYear_modules_mfom_twoOne_grade"
-        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_twoOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_twoOne"
-        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"/>
+        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_twoOne"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text=""
         android:id="@+id/manSci_secondYear_modules_mfom_twoTwo_grade"
-        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_twoTwo"
-        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_twoTwo"
-        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"/>
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_twoTwo"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_twoTwo"
         android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
         android:id="@+id/manSci_secondYear_modules_mfom_pass_grade"
-        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_Pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/manSci_secondYear_modules_mfom_Pass"
-        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"/>
+        android:layout_alignLeft="@id/manSci_secondYear_modules_mfom_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_mfom_Pass"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 
 </RelativeLayout>
