--- a/app/src/main/res/layout/modules_content_strategy.xml
+++ b/app/src/main/res/layout/modules_content_strategy.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manSci_secondYear_strategy_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,63 +17,102 @@
         android:id="@+id/manSci_secondYear_modules_strategy_addAssignment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/manSci_secondYear_modules_strategy_gradeNeeded"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="51dp"
         android:onClick="addAssignment"
         android:text="@string/add_assignment" />
 
-    <TextView
+    <Button
+        android:id="@+id/manSci_secondYear_button_strategy_calculateGrades"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Exam grade needed"
+        android:layout_alignTop="@+id/manSci_secondYear_modules_strategy_addAssignment"
+        android:layout_toEndOf="@+id/manSci_secondYear_modules_strategy_addAssignment"
+        android:onClick="calculateGrades"
+        android:text="@string/calculate_grades_needed" />
+
+    <TextView
         android:id="@+id/manSci_secondYear_modules_strategy_gradeNeeded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:text="Exam grade needed"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 1st: "
         android:id="@+id/manSci_secondYear_modules_strategy_First"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_strategy_gradeNeeded"
-        android:layout_alignParentStart="true" />
+        android:text="For a 1st: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.1:"
         android:id="@+id/manSci_secondYear_modules_strategy_twoOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_strategy_First"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.1:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.2:"
         android:id="@+id/manSci_secondYear_modules_strategy_twoTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_strategy_twoOne"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.2:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 3rd:"
-        android:id="@+id/manSci_secondYear_modules_strategy_third"
-        android:layout_below="@id/manSci_secondYear_modules_strategy_twoTwo"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="To Pass:"
         android:id="@+id/manSci_secondYear_modules_strategy_Pass"
-        android:layout_below="@+id/manSci_secondYear_modules_strategy_third"
-        android:layout_alignParentStart="true" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_secondYear_modules_strategy_twoTwo"
+        android:text="To Pass:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_strategy_First_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_strategy_First"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_strategy_First"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_strategy_twoOne_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_strategy_twoOne"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_strategy_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_strategy_twoOne"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_strategy_twoTwo_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_strategy_twoTwo"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_strategy_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_strategy_twoTwo"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_strategy_pass_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_strategy_Pass"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_strategy_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_strategy_Pass"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 </RelativeLayout>
